--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,23 @@
-# See https://help.github.com/ignore-files/ for more about ignoring files.
+See https://help.github.com/ignore-files/ for more about ignoring files.
 
-# dependencies
+dependencies
+
 /node_modules
 
-# testing
+testing
+
 /coverage
+/build
 
+production
 
+misc
 
-# production
-
-# misc
 .DS_Store
-
-
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
