--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^1.1.1",
+    "request": "^2.83.0",
     "serve-favicon": "^2.4.5",
     "socket.io": "2.0.4",
     "socket.io-client": "^2.0.4",
