--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,15 @@
-See https://help.github.com/ignore-files/ for more about ignoring files.
+# See https://help.github.com/ignore-files/ for more about ignoring files.
 
-dependencies
-
+# dependencies
 /node_modules
 
-testing
-
+# testing
 /coverage
 
+# production
+#/build
 
-production
-
-misc
-
+# misc
 .DS_Store
 .env.local
 .env.development.local
