--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "an-array-of-english-words": "^1.3.1",
+    "babel": "^6.23.0",
+    "babel-preset-stage-0": "^6.24.1",
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "dotenv": "^5.0.1",
@@ -14,6 +16,7 @@
     "mongoose": "^5.0.7",
     "morgan": "^1.9.0",
     "nodemon": "^1.17.1",
+    "npm": "^6.0.0",
     "path": "^0.12.7",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -34,5 +37,10 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:3001"
+  "proxy": "http://localhost:3001",
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-latest": "^6.24.1"
+  }
 }
